# picoscope-server

./: CONTRIBUTING.md  README.md  config.toml  pyproject.toml
src/: main.py
src/service/: __init__.py  example.py  picoscope.py
