[project]
name = "h2pcontrol-picoscope-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.80.0",
    "beyer-labs-h2pcontrol-grpc-python>=1.80.dev0,<2",
    "beyer-labs-h2pcontrol-protocolbuffers-python>=34.dev0,<36",
    "beyer-labs-h2pcontrol-protocolbuffers-pyi>=34.dev0,<36",
    "beyer-labs-h2pcontrol-community-nipunn1313-mypy>=5.1.0.dev0,<6",
    "beyer-labs-h2pcontrol-community-nipunn1313-mypy-grpc>=5.1.0.dev0,<6",
    "h2pcontrol-sdk",
    "pypicosdk>=1.7.4",
]

[dependency-groups]
dev = [
    "ruff==0.15.11",
    "pyright>=1.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[[tool.uv.index]]
url = "https://buf.build/gen/python"

[tool.uv.sources]
h2pcontrol-sdk = { git = "https://github.com/torbenfreise/h2pcontrol-sdk", rev = "0.2.7" }

[tool.uv]
override-dependencies = ["protobuf>=7.34.1"]
